dark mode corrected

--- a/src/styles/ommig.css
+++ b/src/styles/ommig.css
@@ -72,11 +72,9 @@ body.dark .intro {
   background-image: url("/om_mig_billeder/susse_ommig_minidark.webp");
 }
 
-body.dark .intro
-
 /* KUNSTENS VERDEN */
 .kunstens_verden {
-  background-image: url("/om_mig_billeder/background_kunst.svg");
+  background-image: url("/om_mig_billeder/kunst_light.svg");
   background-size: cover; /* Ensure the background image covers the entire container */
   background-repeat: no-repeat;
   background-position: center; /* Center the background image */
